erDiagram
    COMPANY ||--o{ BRANCH : "has"
    COMPANY ||--o{ EMPLOYEE : "employs"
    COMPANY ||--|| WALLET : "owns"
    COMPANY ||--o{ CAPTAIN : "hires"
    COMPANY ||--o{ VEHICLE : "fleet"
    COMPANY ||--o{ PICKUP_LOCATION : "scopes"
    COMPANY ||--o{ COMPLAINT : "receives"

    BRANCH ||--o{ EMPLOYEE : "houses"
    BRANCH ||--o{ ROUTE : "owns"

    ROUTE ||--o{ ROUTE_STOP : "ordered stops"
    ROUTE_STOP }o--|| PICKUP_LOCATION : "references"

    EMPLOYEE ||--o{ EMPLOYEE_PICKUP : "has"
    PICKUP_LOCATION ||--o{ EMPLOYEE_PICKUP : "shared by"
    EMPLOYEE ||--o{ TRIP_EMPLOYEE : "assigned via"
    TRIP ||--o{ TRIP_EMPLOYEE : "carries"

    ROUTE ||--o{ TRIP : "executed as"
    VEHICLE ||--o{ TRIP : "assigned to"
    CAPTAIN ||--o{ TRIP : "drives"

    TRIP ||--o{ ATTENDANCE : "has"
    EMPLOYEE ||--o{ ATTENDANCE : "has"
    ATTENDANCE ||--o{ ATTENDANCE_EVENT : "events"

    WALLET ||--o{ WALLET_TRANSACTION : "ledger"
    TRIP ||--o{ WALLET_TRANSACTION : "charges"

    EMPLOYEE ||--o{ COMPLAINT : "submits"
    ACCOUNT ||--o{ COMPLAINT : "handles"

    EMPLOYEE ||--o{ NOTIFICATION : "receives"

    COMPANY {
        int id PK
        string name
        string status
    }
    BRANCH {
        int id PK
        int company_id FK
        string name
    }
    EMPLOYEE {
        int id PK
        int company_id FK
        int branch_id FK
        string name
        string phone
        string status
    }
    PICKUP_LOCATION {
        int id PK
        int company_id FK
        string name
        decimal lat
        decimal lng
    }
    EMPLOYEE_PICKUP {
        int employee_id PK
        int pickup_location_id FK
        int is_default
    }
    CAPTAIN {
        int id PK
        int company_id FK
        string name
        string phone
        string status
    }
    VEHICLE {
        int id PK
        int company_id FK
        int capacity
        string status
        string plate
        string type
    }
    ROUTE {
        int id PK
        int branch_id FK
        string name
    }
    ROUTE_STOP {
        int id PK
        int route_id FK
        int pickup_location_id FK
        int position
    }
    TRIP {
        int id PK
        int company_id FK
        int route_id FK
        int vehicle_id FK
        int captain_id FK
        date trip_date
        time start_time
        time end_time
        string state
        json stops_snapshot
    }
    TRIP_EMPLOYEE {
        int trip_id PK
        int employee_id FK
        timestamp assigned_at
        timestamp removed_at
    }
    ATTENDANCE {
        int id PK
        int trip_id FK
        int employee_id FK
        string state
        timestamp updated_at
    }
    ATTENDANCE_EVENT {
        int id PK
        int attendance_id FK
        string event_id
        string state
        timestamp ts
        int recorded_by FK
    }
    WALLET {
        int id PK
        int company_id
        decimal balance
        timestamp updated_at
    }
    WALLET_TRANSACTION {
        int id PK
        int wallet_id FK
        string idempotency_key
        decimal amount
        string type
        int trip_id FK
        string status
        timestamp created_at
    }
    COMPLAINT {
        int id PK
        int company_id FK
        int employee_id FK
        string category
        string priority
        string state
        int assigned_agent_id FK
        string resolution
    }
    ACCOUNT {
        int id PK
        int company_id FK
        string role
        string name
        string credentials_hash
    }
    NOTIFICATION {
        int id PK
        int recipient_id FK
        string type
        json payload
        string status
        string event_id
    }
    AUDIT_LOG {
        int id PK
        int company_id FK
        int actor_id FK
        string action
        string entity
        int entity_id
        json old_value
        json new_value
        timestamp created_at
    }
